--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <p>Prueba tu suerte!!</p>
     <label for="numberUser">Mi numero de la suerte: </label>
     <input id="numberUser" type="text" placeholder="Ingresa un numero">
-    <button onclick="mysteriousNumber()">Probar suerte</button> 
+    <button id="btnAttempt">Probar suerte</button> 
     <h3>Numero actual: <span id="currentNumber">_</span></h3> 
     <h3>Numero secreto: <span id="secretNumber">?</span></h3> 
     <h4>Intento numero 1: <span id="firstAttempt">_</span></h4> 
-    <h4>Intento numero 2: <span id="secondAttempt"></span>_</h4> 
-    <h4>Intento numero 3: <span id="thirdAttempt"></span>_</h4> 
+    <h4>Intento numero 2: <span id="secondAttempt">_</span></h4> 
+    <h4>Intento numero 3: <span id="thirdAttempt">_</span></h4> 
     <script src="index.js"></script>
 </body>
 </html>
